--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   --caseHeight: 100;
   --caseWidth: 100;
   --segmentWidth: 20;
-  --segmentSeparation: 20;
+  --segmentSeparation: 30;
   --segmentColor: "white";
 }
 
@@ -36,6 +36,7 @@ body {
 
 .canvas {
   background-color: transparent;
+  border: 1px solid yellow;
 }
 
 .structureCarte {
@@ -45,6 +46,7 @@ body {
 
   /* background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url('"../assets/fond2.jpg"'); */
+
   background-image: url("../assets/fond2.jpg");
   background-blend-mode: darken;
   background-repeat: no-repeat;
@@ -53,9 +55,8 @@ body {
   grid-template-columns: repeat(5, 100px);
   grid-template-rows: 100px 100px;
 
-  /* width: 500px; */
-  width: 100%;
-  height: 600px;
+  width: 500px;
+  height: 610px;
 
   border-radius: 20px;
 }
@@ -70,57 +71,85 @@ body {
 
 #image {
   width: 100px;
-  /* border-radius: 20px; */
+}
+
+.points{
+  position: absolute;
+  top: 0px;
+  left: 20px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 100px;
+  font-weight: bold;
+  color: black;
+  width: fit-content;
+  height: fit-content;
 }
 
 .cardContainer {
   display: grid;
-  grid-template-columns: repeat(4, 190px);
-  grid-template-rows: 100%;
+  grid-template-columns: repeat(4, 140px);
+  column-gap: 10px;
+  row-gap: 20px;
 
-  /* border: 5px solid goldenrod; */
-  width: 725px;
-  height: 240px;
-  margin-top: 150px;
-  padding: 20px;
+  border: 5px solid goldenrod;
+  width: 580px;
+  padding: 10px;
+  height: fit-content;
+
+  background-image: url("../assets/uwin.jpg");
+  background-position: center;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 1);
+  background-blend-mode: overlay;
+}
+
+.UWin{
+  background-color: rgba(0, 0, 0, 0);
+  height: 300px;
 }
 
 .card {
-  width: 150px;
+  /* width: 150px; */
+  height: 200px;
 
-  -webkit-filter: sepia(100%);
+  /* -webkit-filter: sepia(100%);
   filter: sepia(100%);
   -webkit-transition: 0.1s ease-in-out;
-  transition: 0.1s ease-in-out;
+  transition: 0.1s ease-in-out; */
 
   background-position: center;
   background-size: cover;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0.1s ease-in-out;
+  transition: 0.1s ease-in-out;
 }
 
 .card:hover {
-  -webkit-filter: sepia(0);
-  filter: sepia(0);
+  /* -webkit-filter: sepia(0);
+  filter: sepia(0); */
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .pioche {
   position: relative;
-  /* border: 5px solid tomato; */
-  /* border-radius: 10px; */
   padding: 20px;
   width: 450px;
 }
 
-#pioche {
+#pioche
+ {
   position: absolute;
-  width: 450px;
+  width: 400px;
   top: 140px;
 
   border-radius: 20px;
 
   -webkit-transform: scale(1);
   transform: scale(1);
-  -webkit-transition: 0.2s ease-in-out;
-  transition: 0.2s ease-in-out;
+  -webkit-transition: 0.1s ease-in-out;
+  transition: 0.1s ease-in-out;
 }
 
 #pioche:hover {
@@ -128,12 +157,33 @@ body {
   transform: scale(1.1);
 }
 
-#piocheText {
-  position: absolute;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 45px;
-  color: white;
+.hidden{
+  display: none;
+}
 
-  top: 150px;
-  right: 40px;
+.timerContainer{
+  position: absolute;
+  top: 5px;
+  left: 340px;
+
+  width: 150px;
+  height: 100px;
+  padding-left: 40px;
+  padding-top: 20px;
+
+  /* border: 1px solid red; */
+
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+
+  background-image: url("../assets/time.png");
+  background-position: center left ;
+  background-size: 45%;
+  background-repeat: no-repeat;
+}
+
+.timeOut{
+  color: tomato;
 }
