--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   --caseHeight: 100;
   --caseWidth: 100;
   --segmentWidth: 20;
-  --segmentSeparation: 30;
+  --segmentSeparation: 10;
   --segmentColor: "white";
 }
 
@@ -13,139 +13,141 @@
 
 body {
   background-color: #393d42;
-  width: 100vw;
+
+  min-height: 100vh;
 }
 
 .mainContainer {
-  /* border: 2px solid white; */
+  height: 890px;
 
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
 
-  width: 1725px;
-  height: 600px;
-
-  display: grid;
-  grid-template-columns: 550px 775px auto;
-  grid-template-rows: 100%;
-  column-gap: 25px;
+  align-items: center;
+  justify-content: center;
 }
 
 .divShow {
-  position: relative;
+  padding: 0;
+  margin: 0;
+  width: fit-content;
+  height: 600px;
 }
+
 
 .canvas {
   background-color: transparent;
-  border: 1px solid yellow;
 }
 
 .structureCarte {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
-
-  /* background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url('"../assets/fond2.jpg"'); */
-
+  z-index: 1;
+  
   background-image: url("../assets/fond2.jpg");
   background-blend-mode: darken;
   background-repeat: no-repeat;
-
+  
   display: grid;
   grid-template-columns: repeat(5, 100px);
-  grid-template-rows: 100px 100px;
-
-  width: 500px;
-  height: 610px;
-
+  grid-template-rows: repeat(6, 100px);
+  border-collapse: collapse;
+  border-spacing: 0;
+  
+  width: fit-content;
+  height: fit-content;
+  
   border-radius: 20px;
 }
 
 .imageCarte {
-  position: absolute;
-  top: 410px;
-  left: 10px;
+  /* version mobile */
+  /* position: relative;
+  top: -400px;
+  left: 20px;
+  z-index: 3;  
+  width: 200px; */
 
-  width: 200px;
+  /* version laptop + tablette */
+  position: relative;
+  top: -680px;
+  left: 570px;
+  z-index: 3;  
+  width: 265px;
+  height: fit-content;
 }
 
-#image {
-  width: 100px;
-}
 
 .points{
-  position: absolute;
-  top: 0px;
-  left: 20px;
   font-family: 'Times New Roman', Times, serif;
   font-size: 100px;
   font-weight: bold;
   color: black;
+
+  /* version mobile */
+  /* position: relative;
+  top: -700px;
+  left: 8px;
+  z-index: 3;
   width: fit-content;
-  height: fit-content;
+  height: fit-content; */
+
+  /* version laptop + tablette */
+  position: relative;
+  top: -780px;
+  left: 40px;
+  z-index: 3;
+  width: fit-content;
+  height: fit-content;  
 }
 
 .cardContainer {
-  display: grid;
-  grid-template-columns: repeat(4, 140px);
-  column-gap: 10px;
-  row-gap: 20px;
-
-  border: 5px solid goldenrod;
-  width: 580px;
-  padding: 10px;
-  height: fit-content;
-
-  background-image: url("../assets/uwin.jpg");
-  background-position: center;
-  background-size: cover;
-  background-color: rgba(0, 0, 0, 1);
-  background-blend-mode: overlay;
+  display: flex;
+  /* column-gap: 30px; */
 }
 
-.UWin{
-  background-color: rgba(0, 0, 0, 0);
-  height: 300px;
-}
 
-.card {
-  /* width: 150px; */
+.mainCard {
   height: 200px;
+  margin: 0 20px;
 
-  /* -webkit-filter: sepia(100%);
-  filter: sepia(100%);
-  -webkit-transition: 0.1s ease-in-out;
-  transition: 0.1s ease-in-out; */
-
-  background-position: center;
-  background-size: cover;
   -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: 0.1s ease-in-out;
   transition: 0.1s ease-in-out;
 }
 
-.card:hover {
-  /* -webkit-filter: sepia(0);
-  filter: sepia(0); */
+.mainCard:hover {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
 .pioche {
+
+  /* valeurs version mobile */
+  /* position: relative;
+  width: 150px;
+  top: -110px;
+  left: 350px;
+  z-index: 3; */
+
+  /*valeurs version laptop + tablette  */
   position: relative;
-  padding: 20px;
-  width: 450px;
+  width: 300px;
+  top: -600px;
+  left: 530px;
+  z-index: 3;
 }
 
 #pioche
- {
-  position: absolute;
-  width: 400px;
-  top: 140px;
+{
+  /* version laptop + tablette */
+  width: 90%;
 
   border-radius: 20px;
-
+  
   -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: 0.1s ease-in-out;
@@ -162,28 +164,131 @@ body {
 }
 
 .timerContainer{
-  position: absolute;
-  top: 5px;
-  left: 340px;
+  /* versionFti mobile */
+  /* position: relative;
+  top: -980px;
+  left: 330px;
+  z-index: 2; */
 
+  /* version laptop + tablette */
+  position: relative;
+  top: -1210px;
+  left: 330px;
+  z-index: 2;
+  
   width: 150px;
   height: 100px;
   padding-left: 40px;
   padding-top: 20px;
-
-  /* border: 1px solid red; */
-
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 60px;
-  font-weight: bold;
-  text-align: center;
-
+  
   background-image: url("../assets/time.png");
   background-position: center left ;
   background-size: 45%;
   background-repeat: no-repeat;
 }
 
-.timeOut{
-  color: tomato;
+.timer{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.screen{
+  display: flex;
+  flex-direction: column;
+}
+
+.box{
+  background-color: white;
+  width: 100%;
+  height: 100px;
+}
+
+.logoWin{
+  
+  width: 400px;
+
+  display: none;
+}
+
+.logoLoose{
+  
+  width: 400px;
+
+  display: none;
+}
+
+.dark{
+  opacity:0.1;
+}
+
+.show{
+  display: block;
+}
+
+.tryAgain{
+  position:relative;
+  left: 0;
+  top:-330px;
+  
+  width: 200px;
+
+  display: none;
+}
+
+.leaderCard{
+  /* version mobile */
+  /* width: 100%; */
+
+  /* version laptop + tablette */
+  height:300px;
+}
+
+
+
+@media only screen and (max-width : 768px) {
+  /* CSS pour les smartphones et tablettes ici */
+
+  .imageCarte {
+    /*version mobile + tablette */
+    position: relative;
+    top: -450px;
+    left: 15px;
+    z-index: 3;  
+    height: fit-content;
+  }
+
+  .leaderCard{
+    /* version mobile */
+    height: 200px;
+  }
+
+  .points{  
+    /* version mobile */
+    position: relative;
+    top: -700px;
+    left: 8px;
+    z-index: 3;
+    width: fit-content;
+    height: fit-content;
+  }
+
+  .pioche {
+    /* valeurs version mobile */
+    position: relative;
+    width: 150px;
+    top: -110px;
+    left: 350px;
+    z-index: 3;
+  }
+
+  .timerContainer{
+    /* version pour mobile + tablette */
+    position: relative;
+    top: -1020px;
+    left: 330px;
+    z-index: 2;
+  }
+
 }
